...
    @State private var showRestoreAlert: Bool = false
    @State private var refundRequestStatus: String? = nil
    @Environment(\.openURL) var openURL

    public var body: some View {
        VStack {
            Text("How can we help?")
                .font(.title)
                .padding()

            if let subscriptionInformation = subscriptionInformation {
                Text("\(subscriptionInformation.title) - \(subscriptionInformation.duration)")
                    .font(.subheadline)
...
            .padding()
            .frame(width: 300)
            .background(Color.blue)
            .foregroundColor(.white)
            .cornerRadius(10)

            Button("Change plans") {
                Task {
                    try await Purchases.shared.showManageSubscriptions()
                }
            }
            .padding()
            .frame(width: 300)
...
