...
                Section(header: Text("Account Details")) {
                    LabelValueRow(label: "Date when app was first purchased:", value: dateFormatter.string(from: info.originalPurchaseDate!))
                    LabelValueRow(label: "App User ID", value: info.originalAppUserId)
                }
            }
        }
        .navigationTitle("Purchase History")
        .listStyle(InsetGroupedListStyle())
        .onAppear(perform: fetchCustomerInfo)
    }

    private func expirationDescription(for productId: String, in info: CustomerInfo) -> String {
        if let expirationDate = info.expirationDate(forProductIdentifier: productId) {
...

            if let expiresDate = subscriptionInfo.expiresDate {
                let label = subscriptionInfo.willRenew ? "Next Renewal Date:" : "Expires Date:"
                LabelValueRow(label: label, value: formattedDate(expiresDate))
            }

            LabelValueRow(label: "Active:", value: subscriptionInfo.isActive ? "Yes" : "No")

            LabelValueRow(
                label: "Store:",
                value: {
                    switch subscriptionInfo.store {
                    case .appStore: return "Apple App Store"
...
