...

}

@available(iOS 15.0, *)
struct HeaderView: View {
    var body: some View {
        Text("How can we help?")
            .font(.title)
            .padding()
    }
}

@available(iOS 15.0, *)
...
