"OK" = "OK";
"All subscriptions" = "All plans";
"Privacy" = "Privacy";
"Privacy policy" = "Privacy policy";
"Purchases restored successfully!" = "Purchases restored successfully!";
"Restore" = "Restore";
"Restore purchases" = "Restore purchases";
"Terms" = "Terms";
"Terms and conditions" = "Terms and conditions";
"Annual" = "Annual";
"6 Month" = "6 Month";
"3 Month" = "3 Month";
"2 Month" = "2 Month";
"Monthly" = "Monthly";
"Weekly" = "Weekly";
"Lifetime" = "Lifetime";
"%d%% off" = "%d%% off";
"Continue" = "Continue";
"Default_offer_details_with_intro_offer" = "Start your {{ sub_offer_duration }} trial, then {{ total_price_and_per_month }}.";
