appId: com.revenuecat.maestro.ios
name: Change Subscription Plan

onFlowComplete:
  - runFlow: ../../utils/cancel_subscription.yaml

---
- launchApp
- runFlow: 
    file: "../../utils/buy_product.yaml"
    env:
        PRODUCT_ID: "maestro.weekly.tests.01"
- runFlow: "../../utils/open_customer_center.yaml"
- tapOn: "Change plans"
- tapOn: "Product 1 [Monthly] (1 month)"
- tapOn: Subscribe
- tapOn: \b[Oo][Kk]\b
- tapOn: Cancel
- tapOn:
    id: "circled_close_button"