appId: com.revenuecat.maestro.ios
name: See purchase details

---
- launchApp
- runFlow: 
    file: "../../utils/buy_product.yaml"
    env:
        PRODUCT_ID: "maestro.weekly.tests.01"
# more than 2 consumables to enable see all
- runFlow: 
    file: "../../utils/buy_product.yaml"
    env:
        PRODUCT_ID: "maestro.consumable.tests.01"
- runFlow: 
    file: "../../utils/buy_product.yaml"
    env:
        PRODUCT_ID: "maestro.consumable.tests.01"
- runFlow: 
    file: "../../utils/buy_product.yaml"
    env:
        PRODUCT_ID: "maestro.consumable.tests.01"
- runFlow: "../../utils/open_customer_center.yaml"
- tapOn: "See all purchases"
- assertVisible: "SUBSCRIPTIONS"
- tapOn: Product 1 [Weekly]
- assertVisible: Active
- tapOn: Purchase History
- tapOn: How can we help?
- tapOn:
    id: "circled_close_button"