appId: com.revenuecat.maestro.ios
name: Load Shedder - Subscribe to product through V2 Paywall for default offering

---
- launchApp
- tapOn:
    text: "Present Paywall"
- assertVisible: "Test load shedder"
- takeScreenshot: "Paywall"
- tapOn:
    text: "Monthly"
- tapOn:
    text: "Continue"
- takeScreenshot: "IAP Sheet"
- tapOn:
    text: "Subscribe"
- takeScreenshot: "IAP Confirmation"
- tapOn:
    text: "OK"