appId: com.revenuecat.maestro.ios
name: Production - Subscribe to product through V2 Paywall for default offering

---
- launchApp
- tapOn:
    text: "Present Paywall"
- assertVisible: "Test StoreKit\n\nbackend integration tests"
- tapOn:
    text: "Monthly"
- tapOn:
    text: "Continue"
- tapOn:
    text: "Subscribe"
- tapOn:
    text: "OK"