appId: com.revenuecat.maestro.ios
name: Paywalls V2

---
- launchApp
- tapOn:
    text: "Present Paywall"
- assertVisible: "Test StoreKit\n\nbackend integration tests"
- tapOn:
    text: "Monthly"
- tapOn:
    text: "Continue"
- tapOn:
    text: "Subscribe"
- tapOn:
    text: "OK"