appId: com.revenuecat.maestro.ios
name: Change Subscription Plan

onFlowComplete:
  - runFlow: 
        file: ../../utils/cancel_subscription_group.yaml
        env:
            SUBSCRIPTION_GROUP: "subscription.group.1"

---
- launchApp
- runFlow: "../../utils/open_customer_center.yaml"
- tapOn: "Product 1 [Weekly]"
- tapOn: "Change plans"
- tapOn: "Change Plan to Product 1 [Yearly], €2.99 per year, Product 1 on yearly basis"
- tapOn: "Change Plan"
- tapOn: "Subscribe"
- tapOn: "\\b[Oo][Kk]\\b"
- tapOn: "Close"
- tapOn: "How can we help?"
- tapOn:
    id: "circled_close_button"